--- a/404.html
+++ b/404.html
@@ -53,10 +53,10 @@
   <header></header>
   <main class="error">
     <div class="section">
-      <svg viewBox="1 0 38 18" class="error-number">
-        <text x="0" y="17">404</text>
-      </svg>
-      <h2 class="error-message">Page Not Found</h2>
+      <h2 class="error-message">OMG the page is gone ! </h2>
+        <div style="text-align:center; margin: 20px 0;">
+          <img src="/img/crying.gif" alt="Crying cat" style="max-width:200px; width:100%;" />
+        </div>
       <p class="button-container">
         <a href="/" class="button secondary error-button-home">Go home</a>
       </p>
