--- a/404.html
+++ b/404.html
@@ -53,7 +53,7 @@
   <header></header>
   <main class="error">
     <div class="section">
-      <h2 class="error-message">OMG the page is gone ! </h2>
+      <h2 class="error-message">OMG the page is gone ! ????? </h2>
         <div style="text-align:center; margin: 20px 0;">
           <img src="/img/crying.gif" alt="Crying cat" style="max-width:200px; width:100%;" />
         </div>
